# synthesizrr

./: .gitignore  NOTICE  README.md  bandit_report.json  bandit_report_code.txt  pyproject.toml  requirements.txt
.github/workflows/: linting.yml  release.yml  tests.yml
src/synthergent/: FinalStep.py  Synthergent.py  __init__.py  config.py
src/synthergent/base/: __init__.py
src/synthergent/base/algorithm/: __init__.py  bedrock.py  langchain.py  sentence_transformers.py
src/synthergent/base/algorithm/huggingface/: transformers.py
src/synthergent/base/algorithm/sklearn/: SklearnSGDClassifier.py  SklearnSGDRegressor.py
src/synthergent/base/constants/: AlgorithmConstants.py  Alias.py  DataProcessingConstants.py  FileConstants.py  MLConstants.py  MetricConstants.py  VisualizationConstants.py  __init__.py
src/synthergent/base/data/: FileMetadata.py  __init__.py  asset.py  pipeline.py
src/synthergent/base/data/processor/: DataProcessor.py  Nto1ColumnProcessor.py  SingleColumnProcessor.py  __init__.py  mixins.py
src/synthergent/base/data/reader/: Reader.py  __init__.py
src/synthergent/base/data/sdf/: DaskScalableDataFrame.py  DaskScalableSeries.py  DatumScalableSeries.py  DictScalableDataFrame.py  ListOfDictScalableDataFrame.py  NumpyArrayScalableSeries.py  NumpyRecordArrayScalableDataFrame.py  PandasScalableDataFrame.py  PandasScalableSeries.py  RecordScalableDataFrame.py  ScalableDataFrame.py  ScalableDataFrameDataset.py  ScalableSeries.py  TensorScalableSeries.py  TorchScalableSeries.py  __init__.py
src/synthergent/base/data/writer/: Writer.py  __init__.py
src/synthergent/base/framework/: __init__.py  algorithm.py  metric.py  mixins.py  predictions.py  ray_base.py  task_data.py  visualize.py
src/synthergent/base/framework/chain/: Chain.py  __init__.py
src/synthergent/base/framework/evaluator/: AccelerateEvaluator.py  Evaluator.py  LocalEvaluator.py  RayEvaluator.py  __init__.py
src/synthergent/base/framework/task/: __init__.py  classification.py  dense_retrieval.py  embedding.py  ranking.py  regression.py  retrieval.py  sparse_retrieval.py  text_generation.py
src/synthergent/base/framework/tracker/: AimTracker.py  LogFileTracker.py  Tracker.py  __init__.py
src/synthergent/base/framework/trainer/: AccelerateTrainer.py  LocalTrainer.py  RayTuneTrainer.py  Trainer.py  __init__.py
src/synthergent/base/metric/: __init__.py  classification_metrics.py  regression_metrics.py  text_generation_metrics.py
src/synthergent/base/util/: __init__.py  concurrency.py  environment.py  filesystem.py  language.py  logging.py  notify.py  profiling.py  schema.py  struct.py
src/synthergent/base/util/aws/: __init__.py  s3.py
src/synthergent/cleaner/: AddSuffix.py  Cleaner.py  FilterColumnsByValue.py  Sample.py  StringCleaner.py  XMLParser.py  __init__.py
src/synthergent/distillation/: Distillation.py  __init__.py
src/synthergent/quality_check/: LexicalDiversity.py  QualityCheck.py  __init__.py
src/synthesizrr/: __init__.py  common.py  corpus.py  data.py  driver.py  generation.py  main.py  metrics.py
src/synthesizrr/base/: __init__.py
src/synthesizrr/base/algorithm/: __init__.py  bedrock.py  langchain.py  sentence_transformers.py
src/synthesizrr/base/algorithm/huggingface/: __init__.py  transformers.py
src/synthesizrr/base/algorithm/sklearn/: SklearnSGDClassifier.py  SklearnSGDRegressor.py
src/synthesizrr/base/constants/: AlgorithmConstants.py  Alias.py  DataProcessingConstants.py  FileConstants.py  MLConstants.py  MetricConstants.py  VisualizationConstants.py  __init__.py
src/synthesizrr/base/data/: FileMetadata.py  __init__.py  asset.py  pipeline.py
src/synthesizrr/base/framework/: __init__.py  algorithm.py  metric.py  mixins.py  predictions.py  ray_base.py  task_data.py  visualize.py
src/synthesizrr/base/metric/: __init__.py  classification_metrics.py  regression_metrics.py  text_generation_metrics.py
src/synthesizrr/base/util/: __init__.py  concurrency.py  environment.py  filesystem.py  jupyter.py  language.py  logging.py  notify.py  profiling.py  schema.py  string.py  struct.py
src/synthesizrr/base/viz/: ConfusionMatrixViz.py  CorrelationMatrix.py  PrecisionRecallCurve.py  TextGenerationsViz.py  Waffle.py  __init__.py
src/synthesizrr/expt/: __init__.py  common.py  corpus.py  data.py  driver.py  generation.py  main.py  metrics.py
tests/: test_imports.py
(+160 files in other folders)
